2010-07-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* security.h: Set correct object type in ctor.

2010-07-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* utils.h:
	* utils.cpp:
	* deployment.h:
	* deployment.cpp:
	* application.cpp: Move CanonicalizeFileName to managed code, so that we have
	only 1 canonicalization implementation. Partly fixes the #GB18030* tests.

2010-07-21  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.h:
	* frameworkelement.cpp: Add a destroyed listener to
	  FrameworkElement::LogicalParent so we don't end up with
	  dangling pointers if the parent is collected˙

2010-07-20  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (OnPropertyChanged): Need to update
	InternalViewport properties afterall. Re-fixes drts 291 and 509.

2010-07-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dirty.cpp: UpdateLayout: don't cache the # of layers, it may change while
	looping over them. Fixes a crash with #869.

2010-07-20  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (OnPropertyChanged): Since setting
	ViewportOrigin/Width checks against the pan/zoom targets to check
	if the values have changed, set these targets to NAN before
	calling SetViewportOrigin/Width() when the UseSprings property is
	disabled. Fixes the ChangeUseSprings moon-unit test.

2010-07-20  Alan McGovern  <amcgovern@novell.com>

	* fontmanager.cpp: Use the correct value when calling the base
	  method. Thanks rolf!

2010-07-19  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (OnPropertyChanged): Only emit
	ViewportChanged event if UseSprings is enabled. Don't update
	InternalViewport properties unless they've actually changed.

2010-07-19  David Reveman  <davidr@novell.com>

	* frameworkelement.cpp: Use GetBounds/GetSubtreeBounds and
	absolute projection in FindElementsInHostCoordinates.

2010-07-19  Larry Ewing  <lewing@novell.com>

	* thickness.h:
	* cornerradius.h: Add new ApplyFlow methods to deal with the new